--- a/src/web/templates/dashboard.html
+++ b/src/web/templates/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>세금법령 모니터링 대시보드</title>
+    <title>예규판례 모니터링 대시보드</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/dashboard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,8 @@
                         </svg>
                     </div>
                     <div class="header-text">
-                        <h1>세금법령 모니터링</h1>
-                        <p>실시간 세금법령 업데이트 모니터링 시스템</p>
+                        <h1>예규판례 모니터링</h1>
+                        <p>실시간 예규판례 업데이트 모니터링 시스템</p>
                     </div>
                 </div>
                 <div class="header-right">
