--- a/src/web/templates/monitoring.html
+++ b/src/web/templates/monitoring.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>세금 법령 자동 모니터링 시스템</title>
+    <title>예규판례 자동 모니터링 시스템</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/monitoring.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><text y='20' font-size='20'>🔍</text></svg>">
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="header-left">
-                    <h1>🔍 세금 법령 자동 모니터링 시스템</h1>
+                    <h1>🔍 예규판례 자동 모니터링 시스템</h1>
                     <p>새로운 데이터 적시 탐지 • 주기적 자동 크롤링 • 실시간 알림</p>
                 </div>
                 <div class="header-right">
